syntax = "proto3";

package services;

option go_package = "go-node/pb";

service Services {
    rpc PingPong(PingRequest) returns (PongResponse) {};

}

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}
